exglam finnally happening

--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -18,7 +18,7 @@ import CountdownTimer from "@components/CountdownTimer.astro";
       </div>
 
       <p class="welcome-text">
-        Por fin está sucediendo. Ainara y Luke se van a casar. Los invitamos a celebrar nuestro amor
+        ¡Por fin está sucediendo! Ainara y Luke se van a casar. Los invitamos a celebrar nuestro amor
         y también a ustedes por haber sido parte de hacer esto posible.
         <br /><br />
         Tendremos un rompehielo el jueves 26 de junio, la boda el viernes 27, y varias actividades en grupos
