--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import CountdownTimer from "@components/CountdownTimer.astro";
       </div>
 
       <p class="welcome-text">
-        It is finally happening. Ainara and Luke are getting married. Please join us both to celebrate our love,
+        It is finally happening! Ainara and Luke are getting married. Please join us both to celebrate our love,
         but also you for playing a part in making this all possible.
         <br /><br />
         We will have an ice breaker on Thursday June 26th, Wedding on Friday the 27th, and various small group activities
