--- a/src/pages/es/index.astro
+++ b/src/pages/es/index.astro
@@ -19,11 +19,11 @@ import CountdownTimer from "@components/CountdownTimer.astro";
 
       <p class="welcome-text">
         ¡Por fin está sucediendo! Ainara y Luke se van a casar. Los invitamos a celebrar nuestro amor
-        y también a ustedes por haber sido parte de hacer esto posible.
+        y también a ustedes por haber sido parte de nuestras vidas.
         <br /><br />
         Tendremos un rompehielo el jueves 26 de junio, la boda el viernes 27, y varias actividades en grupos
         pequeños durante el fin de semana. Encuentren más información en este sitio web, o pregúntennos
-        si tienen dudas. ¡Estamos ansiosos por verlos!
+        si tienen dudas. ¡Estamos muy contentos de verlos!
       </p>
 
       <CountdownTimer />
