--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,6 +25,10 @@ import CountdownTimer from "@components/CountdownTimer.astro";
         over the weekend. Learn more on this website, or ask us if you have any questions. We can't wait to see you there!
       </p>
 
+       <div class="hero-image">
+        <img src="/public/ainara etc.jpg" alt="Ainara de bebe" />
+        </div>
+
       <CountdownTimer />
     </section>
   </main>
