--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,7 +26,7 @@ import CountdownTimer from "@components/CountdownTimer.astro";
       </p>
 
        <div>
-        <img src="/public/ainara etc.jpg" alt="Ainara de bebe" />
+        <img src="/public/ainara_etc.jpg" alt="Ainara de bebe" />
         </div>
 
       <CountdownTimer />
