fix and remove link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,9 +25,9 @@ import CountdownTimer from "@components/CountdownTimer.astro";
         over the weekend. Learn more on this website, or ask us if you have any questions. We can't wait to see you there!
       </p>
 
-       <div>
-        <img src="/public/ainara_etc.jpg" alt="Ainara de bebe" />
-        </div>
+       <!--<div>-->
+       <!-- <img src="/ainara_etc.jpg" alt="Ainara de bebe" />-->
+       <!--</div>-->
 
       <CountdownTimer />
     </section>
